--- a/News/Views/Posts/Create.cshtml
+++ b/News/Views/Posts/Create.cshtml
@@ -24,7 +24,15 @@
             </div>
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
-                <select asp-for="CategoryId" class ="form-control" asp-items="ViewBag.CategoryId"></select>
+                <select asp-for="CategoryId" class="form-control">
+
+                    @foreach (Category category in ViewBag.Category)
+                    {
+                        <option value="@category.CatehoryId">@category.CategoryName</option>
+                    }
+                </select>
+
+
             </div>
             <div class="form-group">
                 <label asp-for="PostDate" class="control-label"></label>
@@ -43,5 +51,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
