--- a/News/Views/Posts/Details.cshtml
+++ b/News/Views/Posts/Details.cshtml
@@ -37,6 +37,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.PostId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="MainPage">Back to List</a>
 </div>
